--- a/index.html
+++ b/index.html
@@ -58,16 +58,16 @@
 </header>
 <!--~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~-->
 <!--~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ 01. jquery logo (01) ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~-->
-<img class="border displayed"
-  src="./images/image001.png"
-  alt="jQuery logo."
-  style="width:40%" >
+<div class="img-hover-zoom img-hover-zoom--quick-zoom">
+  <img src="./images/image001.png" 
+  alt="jQuery logo.">
+</div>
 <!--~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~-->
 <!--~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ 02. uc davis logo (01) ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~-->
-<img class="displayed border"
-  src="./images/image002.png" 
-  alt="University of California @Davis logo."
-  style="width: 20%;" />
+<div class="img-hover-zoom img-hover-zoom--quick-zoom">
+  <img src="./images/image002.png" 
+  alt="University of California @Davis logo.">
+</div>
 
 <h3>About this Course</h3>
 
