--- a/index.html
+++ b/index.html
@@ -708,10 +708,10 @@ guidelines and the Coursera Honor Code here:</p>
 <h2 id="ch1-01">1.01. Welcome! Course Introduction (0:40)</h2>
 <!--~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~-->
 <!--~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ 03. course intro (08) ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~-->
-<img class="displayed border"
-  src="./images/image003.png" 
-  alt="1.01. Course Introduction."
-  style="width:40%;" />
+<div class="img-hover-zoom img-hover-zoom--quick-zoom">
+  <img src="./images/image003.png" 
+  alt="1.01. Course Introduction.">
+</div>
 
 <p>Hello and welcome to our 3rd course in our four-core specialization
 on JavaScript. My name is Bill Mead and I'm back again to do more
@@ -729,10 +729,10 @@ JavaScript.</p>
 <h2 id="ch1-02">1.02. Module Introduction</h2>
 <!--~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~-->
 <!--~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ 04. module 1 intro (09) ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~-->
-<img class="displayed border"
-  src="./images/image004.png" 
-  alt="1.02. Module 1 Introduction."
-  style="width:40%;" />
+<div class="img-hover-zoom img-hover-zoom--quick-zoom">
+  <img src="./images/image004.png" 
+  alt="1.02. Module 1 Introduction.">
+</div>
 
 <p>Hello and welcome to our first module in our third course on JavaScript.
 In this module, we're going to dive even deeper into jQuery, looking at
