--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 </div>
 <!--~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~-->
 <!--~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ 02. uc davis logo (01) ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~-->
-<div class="img-hover-zoom img-hover-zoom--quick-zoom">
+<div class="img-hover-zoom img-hover-zoom--slowmo">
   <img src="./images/image002.png" 
   alt="University of California @Davis logo.">
 </div>
@@ -708,7 +708,7 @@ guidelines and the Coursera Honor Code here:</p>
 <h2 id="ch1-01">1.01. Welcome! Course Introduction (0:40)</h2>
 <!--~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~-->
 <!--~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ 03. course intro (08) ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~-->
-<div class="img-hover-zoom img-hover-zoom--quick-zoom">
+<div class="img-hover-zoom img-hover-zoom--slowmo">
   <img src="./images/image003.png" 
   alt="1.01. Course Introduction.">
 </div>
@@ -729,7 +729,7 @@ JavaScript.</p>
 <h2 id="ch1-02">1.02. Module Introduction</h2>
 <!--~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~-->
 <!--~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ 04. module 1 intro (09) ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~-->
-<div class="img-hover-zoom img-hover-zoom--quick-zoom">
+<div class="img-hover-zoom img-hover-zoom--slowmo">
   <img src="./images/image004.png" 
   alt="1.02. Module 1 Introduction.">
 </div>
@@ -1121,14 +1121,13 @@ the previous lessons. That's fun.</p>
 because it's a responsive slider.</p>
 <!--~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~-->
 <!--~~~~~~~~~~~~~~~~~~~~~~~~ 19/20. responsive kittens for sale (22) ~~~~~~~~~~~~~~~~~~~~~~~~~~~-->
-<p style="align:center">
-<img src="./images/image019.png?raw=true"
-  style="width:40%"
-  alt="Responsive Kittens for Sale Web Page, #1." />
-<img src="./images/image020.png?raw=true"
-  style="width:40%"
-  alt="Responsive Kittens for Sale Web Page, #2." />
-</p>
+<img class="displayed border"
+  src="./images/image019.png" 
+  alt="Responsive Kittens for Sale Web Page, #1."
+  style="width:40%;" />
+<img src="./images/image020.png" 
+  alt="Responsive Kittens for Sale Web Page, #2."
+  style="width:40%;" />
 
 <p>I've opened up the page over here and you can see if I pull this off and
 resize it, the page is responsive and it squishes and stretches, and so,
@@ -1485,16 +1484,9 @@ for that unordered list.</p>
 <!--~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~-->
 <!--~~~~~~~~~~~~~~~~~~~~~~~ 51. index.html, div class='flexslider' (35) ~~~~~~~~~~~~~~~~~~~~~~~~-->
 <img class="border displayed"
-  src="./images/image038.png"
-  alt="Add stylesheet and 2 javascript files to head of index."
-  style="width:50%" >
-
-<p style="align:center">
-<img src="./images/image051.png"
+  src="./images/image051.png"
   alt="Add flexslider class to div and slides class to ul."
-  style="border: 2px solid gray;"
-  width="50%;" />
-</p>
+  style="width:50%" >
 
 <p>Let's go over here and set this up the same way. We need a div, we need
 a class, equals FlexSlider on here. This needs a class equals slides.
@@ -1506,24 +1498,20 @@ just change these numbers, 2, 3, 4, 5, 6, and 7. That will give us seven
 slides with seven kittens, one on each side. That's great.</p>
 <!--~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~-->
 <!--~~~~~~~~~~~~~~~~~~~~~~~~~~ 52. verify classes on div and ul (36) ~~~~~~~~~~~~~~~~~~~~~~~~~~~-->
-<p style="align:center">
-<img src="./images/image052.png"
+<img class="border displayed"
+  src="./images/image052.png"
   alt="Add class to div and ul in index.html."
-  style="border: 2px solid gray;"
-  width="50%;" />
-</p>
+  style="width:50%" >
 
 <p>Now we've got our markup looking the way that it needs to look for our
 project. What's the next thing that we need to do? We did the markup, we
 got that all in, so that's great.</p>
 <!--~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~-->
 <!--~~~~~~~~~~~~~~~~~~~~~~~~ 53. step 3, add to head of index.html (36) ~~~~~~~~~~~~~~~~~~~~~~~~-->
-<p style="align:center">
-<img src="./images/image053.png"
-  alt="."
-  style="border: 2px solid gray;"
-  width="50%;" />
-</p>
+<img class="border displayed"
+  src="./images/image053.png"
+  alt="Step 3, Add to head of index.html."
+  style="width:50%" >
 
 <p>Step 3, directions. Hook up the <b>FlexSlider</b>. This thing says to
 use the <b>window.load</b> function. Now, I happen to know that the
@@ -1531,12 +1519,10 @@ use the <b>window.load</b> function. Now, I happen to know that the
 jQuery, but that's okay. This is what it says down here.</p>
 <!--~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~-->
 <!--~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ 54. update myscript.js (37) ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~-->
-<p style="align:center">
-<img src="./images/image054.png"
+<img class="border displayed"
+  src="./images/image054.png"
   alt="Add functions to MyScript.js."
-  style="border: 2px solid gray;"
-  width="50%;" />
-</p>
+  style="width:50%" >
 
 <p>We could just copy this, <b>window.load</b> function here. This place
 after these links, script type JavaScript. But we're going to put this
@@ -1544,12 +1530,10 @@ not inside script tags, but we already have a separate file called
 <b>MyScript</b> that's linked up here. That's this one here.</p>
 <!--~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~-->
 <!--~~~~~~~~~~~~~~~~~~~~~~~~ 55. on load, run flexslider function (37) ~~~~~~~~~~~~~~~~~~~~~~~~~-->
-<p style="align:center">
-<img src="./images/image055.png"
+<img class="border displayed"
+  src="./images/image055.png"
   alt="MyScript.js: Add flexslider function."
-  style="border: 2px solid gray;"
-  width="50%;" />
-</p>
+  style="width:50%" >
 
 <p>I'm going to put it on there, <b>MyScript</b>. Take <b>FlexSlider</b>
 and make it run. This says jQuery, go get this <b>FlexSlider</b>
@@ -2088,24 +2072,20 @@ the markup to go along with this, for my FlexSlider. I will provide some
 snippets with this lesson that you can open and they look like this.</p>
 <!--~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~-->
 <!--~~~~~~~~~~~~~~~~~~~~~~~~~~~ 100. flexslider jquery plugin (54) ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~-->
-<p style="align:center">
-<img src="./images/image100.png"
+<img class="displayed"
+  src="./images/image100.png"
   alt="FlexSlider jQuery Plugin."
-  style="border: 2px solid black; border-radius:15px"
-  width="50%;" />
-</p>
+  style="width:50%" />
 
 <p>There are some snippets here and so I'm basically going to replace my
 slider with this content here. You can type it all out if you wanted to,
 instead of just putting the pictures in.</p>
 <!--~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~-->
 <!--~~~~~~~~~~~~~~~~~~~~~~~ 101. updated markup adding anchor tags (54) ~~~~~~~~~~~~~~~~~~~~~~~~-->
-<p style="align:center">
-<img src="./images/image101.png"
+<img class="displayed"
+  src="./images/image101.png"
   alt="Add anchor tags with class to markup."
-  style="border: 2px solid black; border-radius:15px"
-  width="50%;" />
-</p>
+  style="width:50%" />
 
 <p>I have a div, with an h2. The div has a class of slide 1, slide 2, slide
 3, so on and so forth. Then I have the h1 and the h2 and I have an
@@ -2145,12 +2125,10 @@ this.</p>
 <h2 id="ch1-12">1.12. Additional Styling (5:47)</h2>
 <!--~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~-->
 <!--~~~~~~~~~~~~~~~~~~~~~~~~~~~ 104. additional styling (1.12) (56) ~~~~~~~~~~~~~~~~~~~~~~~~~~~~-->
-<p style="align:center">
-<img src="./images/image104.png"
+<img class="displayed"
+  src="./images/image104.png"
   alt="1.12. Additional Styling for FlexSlider."
-  style="border: 2px solid black; border-radius:15px"
-  width="40%;" />
-</p>
+  style="width:40%" />
 
 <p>In the last module, we updated the markup for our fancy version of the
 slider, and now we need to do some updating for the actual CSS for the
@@ -2173,12 +2151,10 @@ just in my section with the flex slider stuff here. It doesn't really
 matter where they go, I'm going to put them here.</p>
 <!--~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~-->
 <!--~~~~~~~~~~~~~~~~~~~~~~ 107. styles.css: slide1-slide5 background (57) ~~~~~~~~~~~~~~~~~~~~~~-->
-<p style="align:center">
-<img src="./images/image107.png"
+<img class="displayed"
+  src="./images/image107.png"
   alt="Define background for slide1 thru slide5 in styles.css."
-  style="border: 2px solid black; border-radius:15px"
-  width="50%;" />
-</p>
+  style="width:50%" />
 
 <p>Now, this is really important, the slides the .slide1, .slide2,
 .slide3, that corresponds to these divs, div class slide3, slide4.
@@ -2198,12 +2174,10 @@ there's some features coming to CSS that will make it easier in the long
 run, but for right now it's a little clunky and unfortunate.</p>
 <!--~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~-->
 <!--~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ 108. set position of slides (58) ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~-->
-<p style="align:center">
-<img src="./images/image108.png"
+<img class="displayed"
+  src="./images/image108.png"
   alt="The position CSS property sets how an element is positioned in a document."
-  style="border: 2px solid black; border-radius:15px"
-  width="50%;" />
-</p>
+  style="width:50%" />
 
 <p>But basically, what I've done here is I've said the div that's inside
 these list items, I'm going to make it a width 100% position relative
@@ -2220,12 +2194,10 @@ And these images are twice as wide as they are tall. So that actually
 works for these particular images.</p>
 <!--~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~-->
 <!--~~~~~~~~~~~~~~~~~~~~~~~~~ 109. kitten01.jpg image dimensions (59) ~~~~~~~~~~~~~~~~~~~~~~~~~~-->
-<p style="align:center">
-<img src="./images/image110.png"
+<img class="displayed"
+  src="./images/image109.png"
   alt="Image Dimensions for kitten01.jpg."
-  style="border: 2px solid black; border-radius:15px"
-  width="50%;" />
-</p>
+  style="width:50%" />
 
 <p>If I come back to the finder and look at these images, if I do CMD+I,
 you can see here that the dimensions of this image is 960 by 480, it's
@@ -2253,12 +2225,10 @@ And you can set the width to whatever the height is in relation to the
 width. And then I've got background size cover.</p>
 <!--~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~-->
 <!--~~~~~~~~~~~~~~~~~~~~~~~~ 110. styling the cta 'call to action' (60) ~~~~~~~~~~~~~~~~~~~~~~~~-->
-<p style="align:center">
-<img src="./images/image110.png"
-  alt="."
-  style="border: 2px solid black; border-radius:15px"
-  width="50%;" />
-</p>
+<img class="displayed"
+  src="./images/image110.png"
+  alt="Styling the CTA 'Call to Action' button."
+  style="width:50%" />
 
 <p>Then down here I'm setting the H2 to position absolute top 20 pixels,
 left 20 pixels, then I'm setting the color for that. So that's not too
@@ -2266,12 +2236,10 @@ fancy. But that's an important thing to understand with the way that
 this is working.</p>
 <!--~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~-->
 <!--~~~~~~~~~~~~~~~~~~~~~~~~ 111. styling the cta 'call to action' (60) ~~~~~~~~~~~~~~~~~~~~~~~~-->
-<p style="align:center">
-<img src="./images/image111.png"
-  alt="."
-  style="border: 2px solid black; border-radius:15px"
-  width="50%;" />
-</p>
+<img class="displayed"
+  src="./images/image111.png?raw=true"
+  alt="Styling the CTA 'Call to Action' button."
+  style="width:50%" />
 
 <p>The next thing we need is the styling for the actual call to action
 buttons that are going to show up on the slides. If I save this like
@@ -2286,12 +2254,10 @@ need to style this call to action, and I'll do that in the next lesson.</p>
 <h2 id="ch1-13">1.13. Styling the CTA ‘Call To Action’</h2>
 <!--~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~-->
 <!--~~~~~~~~~~~~~~~~~~~~~~~~ 112. styling the cta 'call to action' (61) ~~~~~~~~~~~~~~~~~~~~~~~~-->
-<p style="align:center">
-<img src="./images/image112.png"
+<img class="displayed"
+  src="./images/image112.png?raw=true"
   alt="1.13. Styling the CTA 'Call to Action'."
-  style="border: 2px solid black; border-radius:15px"
-  width="40%;" />
-</p>
+  style="width:40%" />
 
 <p>Now we're down to styling the call to action so that it displays
 properly on the page, and I have a rule for the dot CTA anchor tags,
@@ -2365,12 +2331,10 @@ it to #ededed. The reason for that, it's a light gray, one of the slides
 is dark, so over here, I have a class of light on slide 4.</p>
 <!--~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~-->
 <!--~~~~~~~~~~~~~~~~~~~~~~~~~ 118. styles.css: background slide (63) ~~~~~~~~~~~~~~~~~~~~~~~~~~~-->
-<p style="align:center">
-<img src="./images/image118.png"
+<img class="displayed"
+  src="./images/image118.png?raw=true"
   alt="Define different background colors for slides."
-  style="border: 2px solid black; border-radius:15px"
-  width="50%;" />
-</p>
+  style="width:50%" />
 
 <p>You may have also wondered why on one of the slides I went up here, I
 went kitten 2 to kitten 6, and then four, and then five. Kitten 3, the
@@ -2383,12 +2347,10 @@ we need there for that, so that's really good and should make sense in
 our work.</p>
 <!--~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~-->
 <!--~~~~~~~~~~~~~~~~~~~~~~~~~~ 119. resize call to action button (64) ~~~~~~~~~~~~~~~~~~~~~~~~~~-->
-<p style="align:center">
-<img src="./images/image119.png"
+<img class="displayed"
+  src="./images/image119.png?raw=true"
   alt="Resize the CTA (call to action) button for tablet-sized browser windows."
-  style="border: 2px solid black; border-radius:15px"
-  width="50%;" />
-</p>
+  style="width:50%" />
 
 <p>We need a couple more rules that are going to resize these elements for
 desktop and for mobile, so we need to add these rules into the media
@@ -2432,12 +2394,10 @@ anymore, because if, this size or wider, it's always going to be this
 size, 150px. Font-size to 24 pixels.</p>
 <!--~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~-->
 <!--~~~~~~~~~~~~~~~~~~~~~~~~~~~ 124. kittens for sale example (65) ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~-->
-<p style="align:center">
-<img src="./images/image124.png"
+<img class="displayed"
+  src="./images/image124.png?raw=true"
   alt="Kittens for Sale example."
-  style="border: 2px solid black; border-radius:15px"
-  width="50%;" />
-</p>
+  style="width:50%" />
 
 <p>That gets all of the styling in place for these, and if we go back and
 review the page, you'll see that the call to action isn't on the screen
@@ -2446,12 +2406,10 @@ at all, it's going to be up here, I actually noticed down here at bottom
 look in end here, is round like this.</p>
 <!--~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~-->
 <!--~~~~~~~~~~~~~~~~~~~~~~~~ 125. example: kittens for sale! (66) ~~~~~~~~~~~~~~~~~~~~~~~~~-->
-<p style="align:center">
-<img src="./images/image125.png"
+<img class="displayed"
+  src="./images/image125.png?raw=true"
   alt="Kittens for Sale example, #2."
-  style="border: 2px solid black; border-radius:15px"
-  width="50%;" />
-</p>
+  style="width:50%" />
 
 <p>If you go to number 4, slide 4, that one should be picking up the
 light class, and I don't know why it's not now. You know what, I think I
@@ -2474,13 +2432,11 @@ section: <b>jQuery Plugins and FlexSlider</b>.</p>
 <!--~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~-->
 <h2 id="ch2-01">2.01. Module 2 Intro (0:38)</h2>
 <!--~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~-->
-<!--~~~~~~~~~~~~~~~~~~~~~~~~ 126. module 2 intro - scroll effects (67) ~~~~~~~~~~~~~~~~~~~~~~~~~-->
-<p style="align:center">
-<img src="./images/image126.png"
+<!--~~~~~~~~~~~~~~~~~~~~~ 126. module 2 intro - scroll effects (2.01) (67) ~~~~~~~~~~~~~~~~~~~~~-->
+<img class="displayed"
+  src="./images/image126.png?raw=true"
   alt="2.01. Module 2 Intro - Scroll Effects."
-  style="border: 2px solid black; border-radius:15px"
-  width="40%;" />
-</p>
+  style="width:40%" />
 
 <p>Hello and welcome to our second module. In this lesson, we will look
 at scroll effects. Scroll effects are very popular these days and you
@@ -10552,3 +10508,8 @@ you'll get more practice. So I look forward to seeing you there.</p>
   style="width:40%; float: left; margin-left: 5%; margin-bottom: 1em;"
   alt="." />
 <p style="clear: both;"></p>
+
+<div class="img-hover-zoom img-hover-zoom--quick-zoom">
+  <img src="./images/image###.png" 
+  alt=".">
+</div>
